new html and css

--- a/medium/medium.html
+++ b/medium/medium.html
@@ -6,16 +6,16 @@
 </head>
 <body>
   <header>
-      <img src="http://placehold.it/150x50">
-      <section>
-      <a href="#">Write a story</a>
-      <a href="#">Sihn in/Sign up</a>
-      <img src="http://placehold.it/15x15">
-    </section>rm ls
-  </header>
+    <img src="http://placehold.it/150x50">
+  <section>
+    <a href="#">Write a story</a>
+    <a href="#">Sihn in/Sign up</a>
+    <img src="http://placehold.it/15x15">
+  </section>
+</header>
 <main>
   <nav >
-    <ul class="navlist">
+    <ul>
       <li>Home</li>
       <li>Popular of medium</li>
       <li>Audio</li>
@@ -27,31 +27,23 @@
       <li>Culture</li>
       <li>Self</li>
       </ul>
-  <nav>
-      <img src="http://placehold.it/1370x450">
+    </nav>
+  </header>
+  <main>
+    <img src="http://placehold.it/1370x450">
     <h1> Today's top stories </h1>
-  <p class=right> <a href="#"> MORE></a></p>
-  <div class="main2">
+    <a href="#">MORE> </a>
+    <section class="featured_content">
       <ul>
-          <li><img src="http://placehold.it/200x300">
-            <section>
-              <h3>Some story here</h3>
-              <p> Some more about this story. Some more about this story. Some more about this story. Some more about this story.</p>
-              <img src='http://placehold.it/30x30'>
-              <h5> Autors name<h5>
-                <p>Day</p>
-                <p>Time</p>
-                <img src='http://placehold.it/15x15'>
-              </section></li>
-              <li><img src="http://placehold.it/200x300">
-              <section>
-                <h3>Some story here</h3>
-                <p> Some more about this story. Some more about this story. Some more about this story. Some more about this story.</p>
-                <img src='http://placehold.it/30x30'>
-                <h5> Autors name<h5>
-                  <p>Day</p>
-                  <p>Time</p>
-                  <img src='http://placehold.it/15x15'>
-                </section></li>
-              </ul>
+        <li> <img src="http://placehold.it/200x300">
+          <h3>Some story here</h3>
+          <p> Some more about this story. Some more about this story. Some more about this story. Some more about this story.</p>
+          <div class= left>
+            <img src='http://placehold.it/30x30'>
+            <h5> Autors name<h5>
+              <p>Day</p>
+              <p>Time</p>
+              <img  src='http://placehold.it/15x15'>
             </div>
+          </li>
+        </main>
